# auto-translator

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  app.py  detection.py  languages.py  pyproject.toml  requirements.txt  run.sh  settings.py  uninstall.sh
assets/: build_icns.sh  make_icon.py
auto-translator.app/Contents/: Info.plist
auto-translator.app/Contents/MacOS/: launch
auto-translator.app/Contents/Resources/: app.icns
docs/: README.md  development.md  engines.md  installation.md  troubleshooting.md  uninstall.md  usage.md
engines/: __init__.py  _idle.py  _llm_util.py  _mlx_common.py  argos_engine.py  llamacpp_engine.py  mlx_e4b_engine.py  mlx_engine.py
tools/: build_mlx_model.py
web/: index.html
