[project]
name = "auto-translator"
version = "1.2.0"
description = "Offline-first local translation app: desktop GUI + Argos Translate (NMT) core, with the MLX small-LLM engine on Apple Silicon and an opt-in llama.cpp engine (Gemma 4)."
readme = "README.md"
requires-python = ">=3.10"
# Core: Argos (default NMT engine) + language detection + model downloads, the
# desktop GUI window, and the MLX small-LLM engine on Apple Silicon.
# - pywebview: the standalone desktop window (native WebView; macOS WKWebView).
#   Cross-platform; if it can't open a window the app falls back to the browser.
# - mlx-vlm: carries a platform marker, so it auto-installs on Apple Silicon
#   macOS (the recommended LLM engine there) and is a no-op elsewhere. Pinned to
#   the version the models were converted with (convert/load must match).
dependencies = [
    "argostranslate>=1.9",
    "langdetect>=1.0.9",
    "huggingface-hub>=0.20",
    "pywebview>=5",
    "mlx-vlm==0.6.3 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.optional-dependencies]
# llama.cpp engine (Gemma 4 GGUF), opt-in. Its prebuilt wheel can mismatch the
# CPU arch (e.g. x86_64 on Apple Silicon); on macOS prefer the MLX engine.
#   uv sync --extra llamacpp
llamacpp = ["llama-cpp-python>=0.3"]

[tool.uv]
# This is a runnable app, not a distributable package — don't try to build it.
package = false
# transformers 5.13.0 broke mlx-lm's tokenizer registration: mlx-lm registers
# "NewlineTokenizer" by passing a *string* config key, and 5.13.0's AutoTokenizer
# register does `key.__module__` on it -> AttributeError at `import mlx_vlm`, so
# switching to the MLX (Gemma) engine crashed. Cap below 5.13 until mlx-lm stops
# passing a string. (Constraint, not a direct dep: only applies on the platforms
# where mlx-vlm actually pulls transformers in — i.e. Apple Silicon.)
constraint-dependencies = ["transformers>=5.5,<5.13"]
